Add new applications: LULESH, HPL, HPCG, LAMMPS, QE

--- a/communication-analysis.tex
+++ b/communication-analysis.tex
@@ -1,8 +1,9 @@
 \section{通信模式分析}
 
-使用\perflow{}实现通信模式分析的分析模型，在NPB基准测试程序和SWEEP3D上进行测试。测试结果如下：
+使用\perflow{}实现通信模式分析的分析模型，在NPB基准测试程序上进行测试。测试结果如下：
 
-\begin{figure}[!htb]
+\begin{figure}[!h]
+  \setcounter{subfigure}{0}
   \centering
   % \includegraphics[width=0.9\textwidth]{}
   \subfigure[BT]{
@@ -33,8 +34,58 @@
     \centering
     \includegraphics[width=0.23\textwidth]{comm_pattern/sp.B.pdf}
   }
+  \subfigure[MG]{
+    \centering
+    \includegraphics[width=0.23\textwidth]{comm_pattern/mg.C.pdf}
+  }
+\end{figure}
+
+在SWEEP3D和LULESH上进行测试。测试结果如下：
+
+\begin{figure}[!h]
+  \setcounter{subfigure}{0}
+  \centering
   \subfigure[SWEEP3D]{
     \centering
-    \includegraphics[width=0.23\textwidth]{comm_pattern/sweep3d.pdf}
+    \includegraphics[width=0.4\textwidth]{comm_pattern/sweep3d.pdf}
+  }
+  \subfigure[LULESH]{
+    \centering
+    \includegraphics[width=0.4\textwidth]{comm_pattern/lulesh.pdf}
+  }
+\end{figure}
+
+在HPL（High Performance Linpack）和HPCG上进行测试。测试结果如下：
+
+\begin{figure}[!h]
+  \setcounter{subfigure}{0}
+  \centering
+  \subfigure[HPL]{
+    \centering
+    \includegraphics[width=0.4\textwidth]{comm_pattern/hpl.pdf}
+  }
+  \subfigure[HPCG]{
+    \centering
+    \includegraphics[width=0.4\textwidth]{comm_pattern/hpcg.pdf}
+  }
+\end{figure}
+
+
+在LAMMPS和QE上进行测试。测试结果如下：
+
+\begin{figure}[!h]
+  \setcounter{subfigure}{0}
+  \centering
+  \subfigure[LAMMPS]{
+    \centering
+    \includegraphics[width=0.3\textwidth]{comm_pattern/lammps.pdf}
+  }
+  \subfigure[QE npool=16]{
+    \centering
+    \includegraphics[width=0.3\textwidth]{comm_pattern/pw.x-npool16.pdf}
+  }
+  \subfigure[QE npool=8]{
+    \centering
+    \includegraphics[width=0.3\textwidth]{comm_pattern/pw.x-npool8.pdf}
   }
 \end{figure}
