--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\perflow}{\textsc{PerFlow}\xspace}
 
-\title{使用 \perflow{} 测试 NPB 程序}
+\title{使用 \perflow{} 测试应用程序}
 \author{金煜阳 \\ Yuyang Jin}
 \institute{清华大学计算机系 \\ PACMAN实验室}
 
@@ -28,7 +28,7 @@
   \perflow{}进行了两层抽象，首先将程序性能行为抽象为图，因此基本的性能分析子任务随之转化为图分析任务。
   其次，将性能分析过程抽象为数据流图，允许用户将基本的性能分析子任务组成为数据流图，实现一个完整的性能分析任务。
   
-  本文记录yes集群上\perflow{}的功能测试，主要测试对象为NPB测试集等，测试的分析功能包括通信模式分析、进程相似性分析等。
+  本文档记录yes集群上\perflow{}的功能测试，主要测试对象为NPB测试集、Mantevo测试集、HPL等典型测试程序和诸如LAMMPS、QE、WRF等真实应用，测试的分析功能包括通信模式分析、进程相似性分析等。
 \end{abstract}
 
 \section*{测试环境}
@@ -38,11 +38,11 @@
 
 \input{process-similarity-analysis.tex}
 
-% \nocite{*}
+\nocite{*}
 % \printbibliography[heading=bibintoc, title=\ebibname]
 
-\appendix
+% \appendix
 %\appendixpage
-\addappheadtotoc
+% \addappheadtotoc
 
 \end{document}
